--- a/transititons/index.html
+++ b/transititons/index.html
@@ -9,12 +9,25 @@
 </head>
 
 <body>
-    <div class="square"></div>
+    <div class="wrapper">
+        <div class="square"></div>
+    </div>
+    <button class="add-square">ADD SQUARE</button>
+
+
     <script>document.addEventListener("DOMContentLoaded", () => {
             const element = document.querySelector(".square")
-            document.addEventListener("click", (event) => {
-                element.style.transform = `translateY(${event.clientY - element.clientHeight / 2}px) translateX(${event.clientX - element.clientHeight / 2}px)`
+            const addButton = document.querySelector(".add-square")
+
+            addButton.addEventListener("click", () => {
+                const newSquare = document.createElement("div")
+                newSquare.classList.add("square")
+                document.querySelector(".wrapper").appendChild(newSquare)
             })
+            // document.addEventListener("click", (event) => {
+            //     element.style.transform = `translateY(${event.clientY - element.clientHeight / 2}px) translateX(${event.clientX - element.clientHeight / 2}px)`
+
+            // })
         })</script>
 </body>
 
