added more keyframes

--- a/animations/index.html
+++ b/animations/index.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
+  <h2>KEY FRAMES</h2>
+  <div class="squares-container">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+  </div>
   <div class="button-container"><button class="pause">PAUSE ANIMATION</button></div>
-
-
+  <div class="board-container">
+    <h2 class="board-h2">EVENT DELEGATION</h2>
+    <div class="color-board">
+    </div>
+  </div>
   <script>
     document.addEventListener("DOMContentLoaded", () => { });
   </script>
