added reset board button

--- a/animations/index.html
+++ b/animations/index.html
@@ -17,11 +17,12 @@
     <div class="square"></div>
   </div>
   <div class="button-container"><button class="pause">PAUSE ANIMATION</button></div>
+  <h2 class="board-h2">EVENT DELEGATION</h2>
   <div class="board-container">
-    <h2 class="board-h2">EVENT DELEGATION</h2>
     <div class="color-board">
     </div>
   </div>
+  <div class="reset-button-container"><button class="reset-button">RESET BOARD</button></div>
   <script>
     document.addEventListener("DOMContentLoaded", () => { });
   </script>
