move esphere on click

--- a/animations/index.html
+++ b/animations/index.html
@@ -23,9 +23,12 @@
     </div>
   </div>
   <div class="reset-button-container"><button class="reset-button">RESET BOARD</button></div>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => { });
-  </script>
+  <h2>MOVE ESPHERE ON CLICK</h2>
+  <div class="esphere-container">
+    <div class="esphere"></div>
+  </div>
+  
+  
   <script src="./index.js"></script>
 </body>
 
