--- a/transititons/index.html
+++ b/transititons/index.html
@@ -24,10 +24,10 @@
                 newSquare.classList.add("square")
                 document.querySelector(".wrapper").appendChild(newSquare)
             })
-            // document.addEventListener("click", (event) => {
-            //     element.style.transform = `translateY(${event.clientY - element.clientHeight / 2}px) translateX(${event.clientX - element.clientHeight / 2}px)`
+            document.addEventListener("click", (event) => {
+                element.style.transform = `translateY(${event.clientY - element.clientHeight / 2}px) translateX(${event.clientX - element.clientHeight / 2}px)`
 
-            // })
+            })
         })</script>
 </body>
 
