--- a/animations/index.html
+++ b/animations/index.html
@@ -23,10 +23,18 @@
     </div>
   </div>
   <div class="reset-button-container"><button class="reset-button">RESET BOARD</button></div>
-  <h2>MOVE ESPHERE ON CLICK</h2>
-  <div class="esphere"></div>
+  <h2>USING PERSPECTIVE AND SCROLL()</h2>
+    <div class="frame">
+      <div class="shape">
+      </div>
+      <div class="shape">
+      </div>
+    </div>
+  <div class="next-animation">
+    <h2>NEXT ANIMATION</h2>
+  </div>
 
-
+  </div>
 
   <script src="./index.js"></script>
 </body>
