--- a/animations/index.html
+++ b/animations/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Animations</title>
 </head>
 
@@ -24,19 +30,27 @@
   </div>
   <div class="reset-button-container"><button class="reset-button">RESET BOARD</button></div>
   <h2>USING PERSPECTIVE AND SCROLL()</h2>
-    <div class="frame">
-      <div class="shape">
-      </div>
-      <div class="shape">
-      </div>
+  <div class="frame">
+    <div class="shape">
     </div>
-  <div class="next-animation">
-    <h2>NEXT ANIMATION</h2>
   </div>
-
+  </div>
+    <h2 data-aos="fade-up">FADE UP - USING AOS LIBRARY</h2>
+    <div class="aos-divs-container">
+      <div class="shapes"></div>
+      <div class="shapes"></div>
+      <div class="shapes"></div>
+      <div class="shapes"></div>
+      <div class="shapes"></div>
+      <div class="shapes"></div>
+    </div>
   </div>
 
   <script src="./index.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
