corrected margin on button

--- a/animations/index.html
+++ b/animations/index.html
@@ -5,46 +5,76 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Animations</title>
 </head>
 
 <body>
-  <h2>KEY FRAMES</h2>
+
+  <h1>PRACTICE WITH DIFERENT APPROACHES OF ANIMATIONS</h1>
+
+  <nav>
+    <ul>
+      <li>Keyframes</li>
+      <li>Event Delegation</li>
+      <li>Perspective & Scroll()</li>
+      <li>Aos Librarys</li>
+    </ul>
+  </nav>
+
+  <h2>Keyframes</h2>
+
   <div class="squares-container">
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
   </div>
+
   <div class="button-container"><button class="pause">PAUSE ANIMATION</button></div>
+
   <h2 class="board-h2">EVENT DELEGATION</h2>
+
   <div class="board-container">
     <div class="color-board">
     </div>
   </div>
+
   <div class="reset-button-container"><button class="reset-button">RESET BOARD</button></div>
+
   <h2>USING PERSPECTIVE AND SCROLL()</h2>
   <div class="frame">
     <div class="shape">
     </div>
   </div>
   </div>
-    <h2 data-aos="fade-up">FADE UP - USING AOS LIBRARY</h2>
-    <div class="aos-divs-container">
-      <div class="shapes"></div>
-      <div class="shapes"></div>
-      <div class="shapes"></div>
-      <div class="shapes"></div>
-      <div class="shapes"></div>
-      <div class="shapes"></div>
-    </div>
+
+  <h2 data-aos="fade-up">ANIMATIONS - USING AOS LIBRARY <br>
+    (clip-path)</h2>
+
+  <div class="aos-divs-container">
+    <div data-aos="fade-up" class="aos-div"></div>
+    <div data-aos="fade-right" class="aos-div"></div>
+    <div data-aos="fade-left" class="aos-div"></div>
+    <div data-aos="zoom-in" class="aos-div"></div>
+    <div data-aos="zoom-in-up" class="aos-div"></div>
+    <div data-aos="flip-down" class="aos-div"></div>
   </div>
+
+  <section>
+
+  </section>
+
+  </div>
+
 
   <script src="./index.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
