--- a/animations/index.html
+++ b/animations/index.html
@@ -13,51 +13,38 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Courgette&family=Funnel+Display:wght@300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Animations</title>
 </head>
 
 <body>
 
-  <h1>PRACTICE WITH DIFERENT APPROACHES OF ANIMATIONS</h1>
-
-  <nav>
+  <nav data-aos="fade-right">
     <ul>
-      <li>Keyframes</li>
-      <li>Event Delegation</li>
-      <li>Perspective & Scroll()</li>
-      <li>Aos Librarys</li>
+      <li><a href="#event-delegation">Event Delegation</a></li>
+      <li><a href="#aos-library">Aos Librarys</a></li>
+      <li><a href="#keyframes">Keyframes</a></li>
+      <li><a href="#perspective-scroll">Perspective & Scroll()</a></li>
+      <li><a href="#neon-sign">Neon Sign</a></li>
     </ul>
   </nav>
 
-  <h2>Keyframes</h2>
+  <h1 data-aos="fade-down">PRACTICE WITH DIFERENT APPROACHES OF ANIMATIONS</h1>
 
-  <div class="squares-container">
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-  </div>
 
-  <div class="button-container"><button class="pause">PAUSE ANIMATION</button></div>
-
-  <h2 class="board-h2">EVENT DELEGATION</h2>
+  <h2 id="event-delegation" class="board-h2">EVENT DELEGATION</h2>
 
   <div class="board-container">
     <div class="color-board">
     </div>
   </div>
 
-  <div class="reset-button-container"><button class="reset-button">RESET BOARD</button></div>
+  <div class="button-container"><button class="reset-button">RESET BOARD</button></div>
 
-  <h2>USING PERSPECTIVE AND SCROLL()</h2>
-  <div class="frame">
-    <div class="shape">
-    </div>
-  </div>
-  </div>
-
-  <h2 data-aos="fade-up">ANIMATIONS - USING AOS LIBRARY <br>
+  <h2 id="aos-library">ANIMATIONS - USING AOS LIBRARY <br>
     (clip-path)</h2>
 
   <div class="aos-divs-container">
@@ -69,12 +56,33 @@
     <div data-aos="flip-down" class="aos-div"></div>
   </div>
 
-  <section>
+  <h2 id="keyframes">KEY FRAMES</h2>
 
-  </section>
-
+  <div class="squares-container">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
   </div>
 
+  <div class="button-container"><button class="play-button">START ANIMATION</button></div>
+
+
+
+  <h2 id="perspective-scroll">USING PERSPECTIVE AND SCROLL()</h2>
+  <div class="frame">
+    <div class="shape">
+    </div>
+  </div>
+  </div>
+
+
+  <h2 id="neon-sign">NEON SIGN</h2>
+  <div class="logo"><b>O<span>p</span>enB<span>a</span>r</b></div>
+
+  <footer>
+
+  </footer>
 
   <script src="./index.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
