change neon-sign innerText

--- a/animations/index.html
+++ b/animations/index.html
@@ -78,7 +78,7 @@
 
 
   <h2 id="neon-sign">NEON SIGN</h2>
-  <div class="logo"><b>O<span>p</span>enB<span>a</span>r</b></div>
+  <div class="logo"><b>Y<span>e</span>s</b></div>
 
   <footer>
 
