--- a/animations/index.html
+++ b/animations/index.html
@@ -82,9 +82,9 @@
   <div class="logo"><b>Y<span>e</span>s</b></div>
 
 
-  <h2 id="before-after" class="before-after-h2">BEFORE AND AFTER </h2>
+  <!-- <h2 id="before-after" class="before-after-h2">BEFORE AND AFTER </h2>
 
-  <div class=""></div>
+  <div class=""></div> -->
 
   <footer>
 
