--- a/scroll-animations/index.html
+++ b/scroll-animations/index.html
@@ -9,13 +9,22 @@
 </head>
 
 <body>
-    <div class="container">
+    <div style="display: flex">
         <div class="square"></div>
-        <div class="content">
-            <div style="height: 200vh; background-color: black"></div>
+        <div class="container">
+            <div class="content">
+                <div style="height: 200vh; background-color: black">
+                </div>
+            </div>
+        </div>
+        <div class="container-2">
+            <div class="content">
+                <div style="height: 200vh; background-color: black">
+                </div>
+            </div>
         </div>
     </div>
-    <div style="height: 200vh; background-color: rgb(39, 39, 39); margin: 20px;"></div>
+    <div style="height: 200vh; background-color: rgb(61, 61, 61); margin: 20px;"></div>
 </body>
 
 </html>
