started with web-api

--- a/animations/index.html
+++ b/animations/index.html
@@ -21,75 +21,83 @@
 </head>
 
 <body>
+  <header>
+    <nav data-aos="fade-right">
+      <ul>
+        <li><a href="#event-delegation">Event Delegation</a></li>
+        <li><a href="#aos-library">Aos Librarys</a></li>
+        <li><a href="#keyframes">Keyframes</a></li>
+        <li><a href="#perspective-scroll">Perspective & Scroll()</a></li>
+        <li><a href="#neon-sign">Neon Sign</a></li>
+        <li><a href="#drag-h2">Drag Element</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <nav data-aos="fade-right">
-    <ul>
-      <li><a href="#event-delegation">Event Delegation</a></li>
-      <li><a href="#aos-library">Aos Librarys</a></li>
-      <li><a href="#keyframes">Keyframes</a></li>
-      <li><a href="#perspective-scroll">Perspective & Scroll()</a></li>
-      <li><a href="#neon-sign">Neon Sign</a></li>
-      <li><a href="#before-after">Before & After</a></li>
-    </ul>
-  </nav>
-
-  <h1 data-aos="fade-down">PRACTICE WITH DIFERENT APPROACHES OF ANIMATIONS</h1>
-
-
-  <h2 id="event-delegation" class="board-h2">EVENT DELEGATION</h2>
-
-  <div class="board-container">
-    <div class="color-board">
+  <section class="main">
+    <div class="hero">
+      <img src="" alt="">
+      <h1 data-aos="fade-down">PRACTICE WITH DIFERENT APPROACHES OF ANIMATIONS</h1>
     </div>
-  </div>
 
-  <div class="button-container"><button class="reset-button">RESET BOARD</button></div>
-
-  <h2 id="aos-library">ANIMATIONS - USING AOS LIBRARY <br>
-    (clip-path)</h2>
-
-  <div class="aos-divs-container">
-    <div data-aos="fade-up" class="aos-div"></div>
-    <div data-aos="fade-right" class="aos-div"></div>
-    <div data-aos="fade-left" class="aos-div"></div>
-    <div data-aos="zoom-in" class="aos-div"></div>
-    <div data-aos="zoom-in-up" class="aos-div"></div>
-    <div data-aos="flip-down" class="aos-div"></div>
-  </div>
-
-  <h2 id="keyframes">KEY FRAMES</h2>
-
-  <div class="squares-container">
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-  </div>
-
-  <div class="button-container"><button class="play-button">START ANIMATION</button></div>
-
-
-
-  <h2 id="perspective-scroll">USING PERSPECTIVE AND SCROLL()</h2>
-  <div class="frame">
-    <div class="shape">
+    <h2 id="event-delegation" class="board-h2">EVENT DELEGATION</h2>
+    <div class="board-container">
+      <div class="color-board">
+      </div>
     </div>
-  </div>
-  </div>
 
+    <div class="button-container"><button class="reset-button">RESET BOARD</button></div>
 
-  <h2 id="neon-sign">NEON SIGN</h2>
-  <div class="logo"><b>Y<span>e</span>s</b></div>
+    <h2 id="aos-library">ANIMATIONS - USING AOS LIBRARY <br>
+      (clip-path)</h2>
+
+    <div class="aos-divs-container">
+      <div data-aos="fade-up" class="aos-div"></div>
+      <div data-aos="fade-right" class="aos-div"></div>
+      <div data-aos="fade-left" class="aos-div"></div>
+      <div data-aos="zoom-in" class="aos-div"></div>
+      <div data-aos="zoom-in-up" class="aos-div"></div>
+      <div data-aos="flip-down" class="aos-div"></div>
+    </div>
+
+    <h2 id="keyframes">KEY FRAMES</h2>
+
+    <div class="squares-container">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+
+    <div class="button-container"><button class="play-button">START ANIMATION</button></div>
+
+    <h2 id="perspective-scroll">USING PERSPECTIVE, GRID AND SCROLL()</h2>
+    <div class="frame">
+      <div class="element1"></div>
+      <div class="element2"></div>
+      <div class="element3"></div>
+    </div>
+    </div>
+
+    <h2 id="neon-sign">NEON SIGN</h2>
+    <div class="logo"><b>Y<span>e</span>s</b></div>
+    <section class="drag">
+      <h2 id="drag-h2">DRAGABLE HTML ELEMENT</h2>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+    </section>
+  </section>
 
   <footer>
 
   </footer>
 
-  <script src="./index.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </body>
+<script src="./index.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </html>
