--- a/scroll-animations/index.html
+++ b/scroll-animations/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div style="display: flex">
+    <div style="display: flex; timeline-scope: --container2-timeline;">
         <div class="square"></div>
         <div class="container">
             <div class="content">
