--- a/web-api/index.html
+++ b/web-api/index.html
@@ -11,6 +11,11 @@
 
 <body>
   <div class="square"></div>
+  <div class="square1"></div>
+  <div class="background"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
 </body>
 
 </html>
