--- a/web-api/index.html
+++ b/web-api/index.html
@@ -11,11 +11,26 @@
 
 <body>
   <div class="square"></div>
-  <div class="square1"></div>
-  <div class="background"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
+  <div class="controls">
+    
+    <div class="section">
+      <h3>Animation Object (DVD Player)</h3>
+      <button class="button play">Play</button>
+      <button class="button pause">Pause</button>
+      <button class="button cancel">Cancel</button>
+      <button class="button reverse">Reverse</button>
+      <button class="button finish">Finish</button>
+      <br /><br />
+      <label for="playbackRateInput">Playback Rate</label>
+      <input type="range" id="playbackRateInput" step="0.2" min="0" max="2" />
+      <output id="playbackRateInputValue" for="playbackRateInput">0</output>
+    </div>
+
+    <div class="square1"></div>
+    <div class="background"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
 </body>
 
 </html>
